# KatePlugins

./: CMakeLists.txt  KteHighlightMarker.kdev4  README.md  ktemarkselectionconfig.cpp  ktemarkselectionconfig.ui  ktemarkselectionplugin.cpp  ktemarkselectionui.rc  ktemarkselectionview.h  ktexteditor_ktemarkselection.desktop  ktexteditor_ktemarkselection_config.desktop
KteMarkSelection/: README.md  ktemarkselectionconfig.h  ktemarkselectionplugin.cpp  ktemarkselectionplugin.h
KteRangeDeleter/: CMakeLists.txt  KteRangeDeleter.kdev4  kterangedeleterplugin.cpp  kterangedeleterplugin.h  kterangedeleterui.rc  kterangedeleterview.h  ktexteditor_kterangedeleter.desktop
